--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -1,61 +1,1 @@
-<style>
-body {
-  background: var(--main-background-color);
-  background: -webkit-linear-gradient(left, var(--complete-highlight-color), var(--main-background-color)); /*Safari 5.1-6*/
-  background: -o-linear-gradient(right, var(--complete-highlight-color), var(--main-background-color)); /*Opera 11.1-12*/
-  background: -moz-linear-gradient(right, var(--complete-highlight-color), var(--main-background-color)); /*Fx 3.6-15*/
-  background: linear-gradient(to right, var(--complete-highlight-color), var(--main-background-color)); /*Standard*/
-  padding: 20px;
-}
-.level_btn {
-  width: 80%;
-  max-width: 350px;
-  min-height: 5vh;
-  font-size: 5vh;
-  text-align: center;
-  text-transform: uppercase;
-  margin: 30px auto !important;
-  border: 1px solid white;
-  border-radius: 10px !important;
-  padding: 0;
-  overflow: hidden;
-  
-}
-.level_start_word, .level_target_word {
-  height: 4vh;
-  overflow: hidden;
-  opacity: 0.8;
-}
-.level_start_word span, .level_target_word span {
-  width: 5vh;
-  display: inline-block;
-}
-.level_start_word {
-  background-color: white;
-  color: var(--main-background-color);
-}
-.level_target_word {
-  background-color: var(--main-background-color);
-  color: white;
-  position: relative;
-}
-.level_start_word_inner {
-  margin-left: -10vh;
-}
-.level_target_word_inner {
-  margin-top: -3vh;
-  margin-left: 10vh;
-}
-
-</style>
-<% @levels.each do |level| %>
-<div class="level_btn">
-  <div class="level_start_word"><div class="level_start_word_inner"><%= level.start %></div></div>
-  <div class="level_target_word"><div class="level_target_word_inner"><%= level.target %></div></div>
-</div>
-<% end %>
-
-<script>
-  $(".level_start_word_inner").lettering();
-  $(".level_target_word_inner").lettering();
-</script>
+<%= render 'index_as_partial' %>
