--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -617,5 +617,9 @@ html, body {
     .glyphicon-remove {
       -webkit-text-stroke: 4px white;
     }
+    .music_btn {
+      left: 80px;
+      top: 3px;
+    }
   }
 }
