increased definition font size

--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -271,7 +271,7 @@
     max-width: 800px;
     color: var(--definition-color);
     text-align: center;
-    font-size: 12px;
+    font-size: 2.5vh;
     white-space: pre-wrap;
     margin: 0 auto;
   }
