--- a/app/views/levels/_limit_count.html.erb
+++ b/app/views/levels/_limit_count.html.erb
@@ -1,6 +1,6 @@
 <div class="limit_count">
   <% remaining_steps_to_optimal.times do %>
-    <div class="limit_dot glyphicon glyphicon-chevron-down"></div>
+    <div class="limit_dot glyphicon glyphicon-triangle-bottom"></div>
   <% end %>
 
   <% if within_optimal? and limit_exist_after_optimal %>
@@ -9,12 +9,9 @@
 
   <% if within_limit? %>
     <% steps_before_limit_after_optimal.times do%>
-      <div class="limit_dot glyphicon glyphicon-chevron-down"></div>
+      <div class="limit_dot glyphicon glyphicon-triangle-bottom"></div>
     <% end %>
   <% end %>
   
-  <%# if limit_exist_after_optimal %>
-    <div class="limit_dot glyphicon glyphicon-remove-circle"></div>
-  <%# end %>
 
 </div>
