--- a/app/views/levels/_completed_message.html.erb
+++ b/app/views/levels/_completed_message.html.erb
@@ -5,8 +5,19 @@
     <%= render 'history_all' %>
     <%= render 'achievement' if within_optimal?  %>
     <div class="next_level_btn_container">
-      <%= link_to "Next Level", level_path(@level.id + 1) , class:"btn btn_custom next_level", remote: true %>
-      <%= link_to "Play Again?", reset_level_path(@level) , class:"play_again_link", remote: true %>
+      <% if @level.id % 10 != 0 %>
+        <%= link_to "Next Level", level_path(@level.id + 1) , class:"btn btn_custom next_level", remote: true %>
+         <%= link_to "Play Again?", reset_level_path(@level) , class:"play_again_link", remote: true %>
+      <% elsif @level.id != 50 %>
+        <div class="chapter_complete">Chapter Complete</div>
+        <%= link_to "Next Chapter", levels_path , class:"btn btn_custom next_level", remote: true %>
+         <%= link_to "Play Again?", reset_level_path(@level) , class:"play_again_link", remote: true %>
+      <% else %>
+        <div class="congrats">Congratulations!<div> 
+        <div class="congrats_message">You have completed all levels!</div>
+         <%= link_to "Replay?", levels_path , class:"btn btn_custom next_level", remote: true %>
+      <% end %>
+     
     </div>
   </div>
 </div>
