--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Word Link">
+    <meta content='True' name='HandheldFriendly' />
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
     <link rel="apple-touch-icon" sizes="192x192" href=<%= image_path("logo.png") %>>  
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
