testing out'add to homescreen'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <script>
+      addToHomescreen();
+    </script>
+
+
     <script type="text/javascript">
       (function(document,navigator,standalone) {
         // prevents links from apps from oppening in mobile safari
