--- a/app/views/levels/home.html.erb
+++ b/app/views/levels/home.html.erb
@@ -15,3 +15,30 @@
   </div>
 
 </div>
+
+<script>
+// On page load
+(function() {
+  alert("as")
+  // Check if iOS
+  if(!(/iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream)){ return false; }
+
+  // Check if already in webapp
+  if(window.navigator.standalone == true){ return false; }
+
+  // Check if you already asked them to add to homescreen
+  if(document.cookie.search("alreadAsked") >= 0){ return false; }
+
+  // Ask user to add to homescreen
+  alert("add this app to your homescreen by clicking 'add to homescreen at the top right corner");
+  document.getElementById("hiddenPrompt").style.display = 'inherit';
+})();
+
+// After clicking a button to dismiss prompt
+function hidePromptInFuture(){
+  // Do not show prompt again
+  document.cookie = "alreadAsked=true; expires=Thu, 18 Dec 2099 12:00:00 UTC";
+}
+
+
+</script>
