--- a/app/views/levels/_history.html.erb
+++ b/app/views/levels/_history.html.erb
@@ -7,10 +7,10 @@
     <% if history_at(number_of_prev_steps) %>
       <% if !@complete %>
         <%= link_to undo_level_path(@level.id, steps: backstep(number_of_prev_steps)), remote: true, class: "undo_link" do %>
-          <span class="last_<%= distance_from_curr(number_of_prev_steps) %>"><%= history_at(number_of_prev_steps)['word'].upcase %></span>
+          <span class="last_<%= distance_from_curr(number_of_prev_steps) %> prev_moves"><%= history_at(number_of_prev_steps)['word'].upcase %></span>
         <% end %>
       <% else %>
-        <span class="last_<%= distance_from_curr(number_of_prev_steps) %>"><%= history_at(number_of_prev_steps)['word'].upcase %></span>
+        <span class="last_<%= distance_from_curr(number_of_prev_steps) %> prev_moves"><%= history_at(number_of_prev_steps)['word'].upcase %></span>
       <% end %>
     <% end %>
 
