--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -277,18 +277,19 @@ html, body{
 
 .limit_count {
   left: 10px;
-  color: var(--main-background-color);
   opacity: 0.8;
   .limit_dot {
     width: 4vh;
-    height: 5vh;
+    height: 4vh;
     text-align: center;
     font-size: 4vh;
     display: block;
+    color: #ccc;
   }
   .glyphicon-triangle-bottom {
-    font-size: 2.5vh;
+    font-size: 2vh;
     padding-top: 0.5vh;
+    height: 3.5vh;
   }
 }
 
