--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -194,7 +194,7 @@ html, body{
   position: fixed;
   top: 23%;
   left: 50%;
-  width: 50%;
+  // width: 50%;
   transform: translate(-50%, -50%);
   span {
     display: block;
