--- a/app/views/levels/_start_word.html.erb
+++ b/app/views/levels/_start_word.html.erb
@@ -1,3 +1,7 @@
 <div class="start_word text-center"> 
-  <span id="start"><%= @level.start.upcase %></span>
+  <span id="start">
+    <% @level.start.split("").each do |letter| %>
+      <div class="letter"><%= letter %></div>
+    <% end %>
+  </span>
 </div>
