--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -732,3 +732,11 @@ html, body {
     margin-right: 15px;
   }
 }
+
+.blink {
+  animation: blinker 3s linear infinite;
+}
+
+@keyframes blinker {  
+  50% { opacity: 0.2; }
+}
