--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
     <meta name="apple-mobile-web-app-title" content="Word Link">
     <meta content='True' name='HandheldFriendly' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href=<%= asset_path('manifest.json') %>>
 
 
     <link rel="apple-touch-icon" sizes="192x192" href=<%= image_path("logo.png") %>>  
